--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       POSTGRES_DB:       "testtask_dev"
       PG_DATA: /var/lib/postgresql/data
     volumes:
-     # - ./init.sql:/docker-entrypoint-initdb.d/1-init.sql
-     # - ./data.sql:/docker-entrypoint-initdb.d/2-data.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/1-init.sql
+      - ./data.sql:/docker-entrypoint-initdb.d/2-data.sql
       - ./dbdata:/var/lib/postgresql/data
     networks:
       backend:
